# DeSAM_client

./: .coverage  .gitignore  CHANGELOG.md  HASH_OPTIMIZATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  README_FILE_TRANSFER.md  TIMEOUT_FIX_SUMMARY.md  TLS_ENFORCEMENT_SUMMARY.md  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: file_transfer_example.py
proto/: client.proto
src/desam_client/: __init__.py  client.py  exceptions.py  models.py
src/desam_client/_grpc/: client_pb2.py  client_pb2_grpc.py
tests/: test_basic.py  test_file_transfer.py  test_integration.py
